[ECO-407] Fix Chat Bubble Message Wrap (#118)
* Empty publisher shouldn't publish audio.

* Handle private calls for fans connected to stage.

* Debugging private calls.

* Wrap publisher.publishAudio in setTimeout.  subcribeAll is an async function.

* Silence invalid flow error.

* Remove private call notification.

* Consolidate private call actions.

* Cleanup.

* Wrap words in chat messages.

--- a/src/components/Common/Chat.css
+++ b/src/components/Common/Chat.css
@@ -69,6 +69,7 @@
     width: 100%;
     justify-content: flex-start;
     margin-bottom: 6px;
+    overflow-wrap: break-word;
 }
 
 .ChatMessages .Message.isMe {
